--- a/src/components/button/__circle/button__circle.pug
+++ b/src/components/button/__circle/button__circle.pug
@@ -4,6 +4,5 @@ mixin circleButton( item )
   if ( item.text )
     .circle-button #{item.text}
   if ( item.icon )
-    - const id = item.id + '_' + item.icon
     .circle-button
-      +materialIcon( item.icon, id )
+      +materialIcon( item.icon, item.id )
