--- a/src/pages/website/__search/website__search.pug
+++ b/src/pages/website/__search/website__search.pug
@@ -8,8 +8,11 @@ block header
   
   +header({ authorized: false, filtering: true })
 
-  .modal-window_filter.window_invisible
-    +modalWindow({ id: "ejectable-button_filter-rooms-1" })
+  .modal-window_filtration.window_invisible
+    +modalWindow({
+      id: "ejectable-button_filtration-1",
+      filters: true
+    })
 
 block main
   -
