--- a/src/components/button/__circle/button__circle.scss
+++ b/src/components/button/__circle/button__circle.scss
@@ -9,6 +9,7 @@ $buttonSize: 100%;
   height: $buttonSize;
   width: $buttonSize;
   box-sizing: border-box;
+  background-color: $white;
   border: 1px solid rgba($valhalla, 0.25);
   border-radius: 50%;
   color: rgba($valhalla, 0.5);
