--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -18,7 +18,7 @@
     display: grid;
     grid-gap: 20px;
     padding: 39px 29px 29px 29px;
-    box-shadow: 0px 0px 25px rgba($black, .2);
+    box-shadow: $boxShadowDefault;
     width: 380px;
 
     & > * {
@@ -29,7 +29,7 @@
 
   &_alternative {
     border-radius: 4px;
-    box-shadow: 0px 10px 20px rgba($valhalla, 0.05);
+    box-shadow: $boxShadowAlternative;
   }
 }
 
