--- a/src/components/input/__dropdown/input__dropdown.scss
+++ b/src/components/input/__dropdown/input__dropdown.scss
@@ -12,7 +12,7 @@ $optionButtonSize: 30px;
     background-color: $white;
     border-color: rgba($valhalla, 0.5);
     border-radius: 0 0 4px 4px;
-    box-shadow: 0 10px 20px rgba($valhalla, 0.05);
+    box-shadow: $boxShadowAlternative;
     padding: 7px 7px 7px 15px;
     visibility: hidden;
     z-index: 20;
