website__search is under refactoring 1

--- a/src/pages/website/__search/website__search.pug
+++ b/src/pages/website/__search/website__search.pug
@@ -133,7 +133,7 @@ block main
 
   main.website__main.fullscreen-bottom-border
     .search-page
-      .search-page__input-parameters.elem__width_83
+      .search-page__input-parameters.window_shifted.elem__width_83
         +cardFilter()
       .search-page__filtered-items
         .search-page__filtered-items-title.custom-font-style_h1
