--- a/src/pages/website/__search/website__search.scss
+++ b/src/pages/website/__search/website__search.scss
@@ -36,12 +36,14 @@
 @media only screen and (max-width: 1412px) {
   .search-page {
     &__input-parameters {
+      background-color: #fff;
+      left: 0;
       position: absolute;
-      left: 0px;
-      padding: 20px 30px;
-      z-index: 100;
-      background-color: $white;
-      visibility: hidden;
+      height: 1200px;
+      z-index: 20;
+      transition: transform .5s ease;
+      margin-right: 0;
+      padding-block: 0;
     }
 
     &__filtered-items {
@@ -53,6 +55,13 @@
         justify-items: center;
       }
     }
+  }
+}
+
+@media only screen and (min-width: 1412px) {
+  .search-page__input-parameters {
+    margin-right: 30px;
+    padding-block: 20px;
   }
 }
 
@@ -71,7 +80,7 @@
   margin-block: 30px;
 
   &__input-parameters {
-    margin-right: 30px;
+    padding-inline: 30px;
   }
 
   &__filtered-items {
@@ -86,4 +95,8 @@
       margin-block: 40px;
     }
   }
+}
+
+.window_shifted {
+  transform: translateX(-320px);
 }
