website__search is under refactoring 3

--- a/src/pages/website/__search/website__search.pug
+++ b/src/pages/website/__search/website__search.pug
@@ -133,8 +133,10 @@ block main
 
   main.website__main.fullscreen-bottom-border
     .search-page
-      .search-page__input-parameters.window_shifted.elem__width_83
-        +cardFilter()
+      .search-page__input-parameters-block.elem__width_83
+        .search-gage__input-parameters
+          +cardFilter()
+        .search-page__shift-activator
       .search-page__filtered-items
         .search-page__filtered-items-title.custom-font-style_h1
           span.search-page__filtered-items-title_text Номера, которые мы для вас подобрали
