--- a/src/pages/website/__search/website__search.scss
+++ b/src/pages/website/__search/website__search.scss
@@ -1,5 +1,7 @@
 @import "@variables";
 
+$sideWindowWidth: 326px;
+
 @media only screen and (max-width: 612px) {
   .search-page__filtered-items-title {
     margin-bottom: 30px;
@@ -36,15 +38,19 @@
 @media only screen and (max-width: 1412px) {
   .search-page {
     &__input-parameters {
-      background-color: #fff;
-      left: 0;
-      position: absolute;
-      height: 1117px;
-      z-index: 20;
-      transition: transform .5s ease;
-      margin-right: 0;
-      padding-block: 0;
-      box-shadow: $boxShadowAlternative;
+      
+      &-block {
+        position: absolute;
+        left: -$sideWindowWidth;
+        height: 1117px;
+        background-color: #fff;
+        box-shadow: $boxShadowAlternative;
+        padding-block: 0;
+        padding-inline: 30px;
+        margin-right: 0;
+        z-index: 20;
+        transition: transform .5s ease;
+      }
     }
 
     &__filtered-items {
@@ -59,12 +65,12 @@
   }
 
   .window_shifted {
-    transform: translateX(-326px);
+    transform: translateX($sideWindowWidth);
   }
 }
 
 @media only screen and (min-width: 1412px) {
-  .search-page__input-parameters {
+  .search-page__input-parameters-block {
     margin-right: 30px;
     padding-block: 20px;
   }
@@ -83,10 +89,6 @@
   align-items: flex-start;
   justify-content: space-between;
   margin-block: 30px;
-
-  &__input-parameters {
-    padding-inline: 30px;
-  }
 
   &__filtered-items {
     &-grid {
