--- a/src/variables/variables.scss
+++ b/src/variables/variables.scss
@@ -37,6 +37,8 @@ $wideFramesWidthMax:  1600px;
 $wideFramesWidthMin:  1100px;
 $wideFramesWidthBase: 1440px;
 
+$piquetHeaderNavbarOps: 1180px;
+
 @function calcRelativeFontSize( $value ) {
   @return #{$value / 16}rem;
 }
