--- a/src/pages/website/__search/website__search.pug
+++ b/src/pages/website/__search/website__search.pug
@@ -135,7 +135,7 @@ block main
     .search-page
       .search-page__input-parameters-block
         .search-page__input-parameters.elem__width_83
-          +cardFilter()
+          +cardFilter({ sliderid: "search-page_main-slider"})
         .search-page__shift-activator
       .search-page__filtered-items
         .search-page__filtered-items-title.custom-font-style_h1
