Adjusted last unflexible style parameters. website__search is done. For now.

--- a/src/pages/website/__search/website__search.scss
+++ b/src/pages/website/__search/website__search.scss
@@ -123,6 +123,7 @@ $inputParametersPadding: 20px;
     background-color: $whisper;
     border-start-end-radius: 20px;
     border-end-end-radius: 20px;
+    cursor: pointer;
   }
 
   &__filtered-items {
