--- a/src/pages/website/__search/website__search.scss
+++ b/src/pages/website/__search/website__search.scss
@@ -11,28 +11,40 @@ $piquetSearchPageInputParameters: 1412px;
 $inputParametersPadding: 20px;
 
 @media only screen and (min-width: $piquetRoomGridColumnsTwo) {
-  .search-page__filtered-items {
-    &-grid {
-      grid-template-columns: repeat(2, auto);
+  .search-page {
+    &__filtered-items {
+      &-grid {
+        grid-template-columns: repeat(2, auto);
+      }
+
+      &-title {
+        margin-bottom: 21px;
+      }
     }
 
-    &-title {
-      margin-bottom: 21px;
+    &__input-parameters-block {
+      display: flex;
     }
   }
 }
 
 @media only screen and (max-width: $piquetRoomGridColumnsTwo) {
-  .search-page__filtered-items-title {
-    margin-bottom: 30px;
+  .search-page {
+    &__filtered-items-title {
+      margin-bottom: 30px;
 
-    &::before {
-      content: "Номера для вас";
+      &::before {
+        content: "Номера для вас";
+      }
+
+      &_text {
+        display: none;
+        text-align: center;
+      }
     }
 
-    &_text {
+    &__input-parameters-block {
       display: none;
-      text-align: center;
     }
   }
 }
@@ -40,18 +52,6 @@ $inputParametersPadding: 20px;
 @media only screen and (min-width: $piquetRoomGridColumnsThree) {
   .search-page__filtered-items-grid {
     grid-template-columns: repeat(3, auto);
-  }
-}
-
-@media only screen and (min-width: $piquetHeaderNavbarOps) {
-  .search-page__input-parameters-block {
-    display: flex;
-  }
-}
-
-@media only screen and (max-width: $piquetHeaderNavbarOps) {
-  .search-page__input-parameters-block {
-    display: none;
   }
 }
 
