--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,12 +1,12 @@
-@import '@variables';
+@import "@variables";
 
-@media only screen and (max-width: 1180px) {
+@media only screen and (max-width: $piquetHeaderNavbarOps) {
   .website__footer_default {
     display: none;
   }
 }
 
-@media only screen and (min-width: 1181px) {
+@media only screen and (min-width: $piquetHeaderNavbarOps) {
   .website__footer_mobile {
     display: none;
   }
@@ -60,7 +60,7 @@
     display: flex;
     justify-content: space-between;
     max-width: $wideFramesWidthMax;
-    min-width: $wideFramesWidthMin;
+    min-width: 1100px;
     width: 100%;
 
     &_shell {
