--- a/src/pages/website/__search/website__search.scss
+++ b/src/pages/website/__search/website__search.scss
@@ -61,7 +61,8 @@ $inputParametersPadding: 20px;
         background-color: $white;
         position: absolute;
         left: -$sideWindowWidth;
-        height: 1160px;
+        top: 130px;
+        height: 1020px;
         box-shadow: $boxShadowAlternative;
         padding-block: 0;
         padding-left: $inputParametersPadding;
