Changed default title of card-filter checkboxList

--- a/src/components/card/__filter/card__filter.pug
+++ b/src/components/card/__filter/card__filter.pug
@@ -77,7 +77,7 @@ mixin cardFilter( item )
       })
     .card-filter__extra-services-list
       +checkboxList({
-        title: "expandable checkbox list",
+        title: "дополнительные удобства",
         groupname: "uik-fe__checkbox-list_default",
         expanded: false,
         checkboxes: [
