--- a/src/components/card/__filter/card__filter.pug
+++ b/src/components/card/__filter/card__filter.pug
@@ -10,7 +10,7 @@ mixin cardFilter( item )
   .card-filter
     .card-filter__date-picker
       +input({
-        id: "search-by__date",
+        id: item.id + "_date",
         type: "date-picker",
         title: "дата пребывания в отеле",
         widthbypercent: 83,
@@ -18,7 +18,7 @@ mixin cardFilter( item )
       })
     .card-filter__guests-dropdown
       +input({
-        id: "search-by__guests",
+        id: item.id + "_guests",
         type: "dropdown",
         title: "гости",
         widthbypercent: 83,
@@ -31,8 +31,8 @@ mixin cardFilter( item )
     .card-filter__slider
       .card-filter__slider-frame
         +rangeSlider({
+          id: item.id + "_slider",
           title: "диапазон цен",
-          id: item.sliderid,
           widthbypercent: 83
         })
       span.card-filter__slider-note.custom-font-style_micro-note Стоимость за сутки пребывания в номере
@@ -66,7 +66,7 @@ mixin cardFilter( item )
         })
     .card-filter__facilities-dropdown
       +input({
-        id: "search-by__baths",
+        id: item.id + "_facilities",
         type: "dropdown",
         title: "удобства номера",
         widthbypercent: 83,
@@ -78,7 +78,7 @@ mixin cardFilter( item )
     .card-filter__extra-services-list
       +checkboxList({
         title: "дополнительные удобства",
-        groupname: "uik-fe__checkbox-list_default",
+        groupname: item.id + "checkbox-list",
         expanded: false,
         checkboxes: [
           { pressed: false, label: "Завтрак" },
