Mean-oval button income parameters reconstruction 2

--- a/src/components/card/__filter/card__filter.pug
+++ b/src/components/card/__filter/card__filter.pug
@@ -7,7 +7,7 @@ include /components/title-bar/title-bar.pug
 include /components/input/input.pug
 
 mixin cardFilter( item )
-  .card-filter
+  form.card-filter
     .card-filter__date-picker
       +input({
         id: item.id + "_date",
