--- a/src/components/card/__login/card__login.pug
+++ b/src/components/card/__login/card__login.pug
@@ -4,15 +4,13 @@ include /components/button/__radio/button__radio.pug
 include /components/button/__toggle/button__toggle.pug
 
 mixin cardLogin()
-  .login.card-style_default
-    .login__title
+  .card-login.card-style_default
+    .card-login__title
       span.custom-font-style_h1 Войти
-
-    .login__input_login-data
+    .card-login__input_login-data
       +input({ placeholder: "Email", type: "Email" })
       +input({ placeholder: "Пароль" })
-
-    .login__authorization-button
+    form.card-login__authorization-button( action="website__landing.html" )
       +meanOvalButtons({
         groupname: "login__authorization-button",
         buttons: [
@@ -24,13 +22,14 @@ mixin cardLogin()
           }
         ]
       })
-
-    .login__registration-section
-      .login__registration-section-container.card-footer
+    form.card-login__registration-section( action="website__registration.html" )
+      .card-login__registration-section-container.card-footer
         span.custom-font-style_body Нет аккаунта на Toxin?
         +meanOvalButtons({
           groupname: "login__button_registration",
-          buttons: [
-            { type: "outlined", text: "создать" },
-          ]
+          buttons: [{
+            type: "submit",
+            mode: "outlined",
+            text: "создать" 
+          }]
         })
