--- a/src/components/card/__room-sample/card__room-sample.pug
+++ b/src/components/card/__room-sample/card__room-sample.pug
@@ -16,23 +16,23 @@ mixin cardRoomSample( item )
   - suffixes[0] = suffixes[4]
   - suffixes[5] = suffixes[1]
 
-  .room-sample.card-style_alternative
-    .room-sample__container_top
-      .room-sample__image
+  .card-room-sample.card-style_alternative
+    .card-room-sample__container_top
+      .card-room-sample__image
         each suffix in suffixes
           img( src=require(`/src/assets/images/raster/room/__thumbnail/room__thumbnail_${ suffix }.jpg`) )
-      .room-sample__listing-indicator
+      .card-room-sample__listing-indicator
         +materialIcon("circle")
         +materialIcon("panorama_fish_eye")
         +materialIcon("panorama_fish_eye")
         +materialIcon("panorama_fish_eye")
-      .room-sample__arrows-container
-        .room-sample__arrow-scroller_left.scroller( id=itemLeftID )
+      .card-room-sample__arrows-container
+        .card-room-sample__arrow-scroller_left.scroller( id=itemLeftID )
           +materialIcon("chevron_left", itemLeftID)
-        .room-sample__arrow-scroller_right.scroller( id=itemRightID )
+        .card-room-sample__arrow-scroller_right.scroller( id=itemRightID )
           +materialIcon("chevron_left", itemRightID)
-    .room-sample__container_bottom
-      .room-sample__title-container 
+    .card-room-sample__container_bottom
+      .card-room-sample__title-container 
         .room-booking__title
           span.room-booking__title_prefix.custom-font-style_body-plain № 
           span.custom-font-style_h2 #{ item.room }
@@ -42,9 +42,9 @@ mixin cardRoomSample( item )
           span.room-booking__price_value #{ item.price.toLocaleString("ru-RU") }
           span.room-booking__price_symbol ₽ 
           span.room-booking__price_addition в сутки
-      .room-sample__rate-n-reviews
-        .room-sample__rate
+      .card-room-sample__rate-n-reviews
+        .card-room-sample__rate
           +starRateButton( item.count.rate )
-        .room-sample__reviews
+        .card-room-sample__reviews
           span.room-booking__price_value #{ item.count.reviews }
           span.room-booking__price_addition  Отзывов
