Mean-oval button income parameters reconstruction 3: minor bugs fixes

--- a/src/components/card/__login/card__login.pug
+++ b/src/components/card/__login/card__login.pug
@@ -15,7 +15,8 @@ mixin cardLogin()
         groupname: "login__authorization-button",
         buttons: [
           {
-            type: "contained",
+            type: "submit",
+            mode: "contained",
             text: "войти",
             iconname: "arrow_forward",
             widthbypercent: 100
