--- a/src/pages/website/__search/website__search.scss
+++ b/src/pages/website/__search/website__search.scss
@@ -120,7 +120,7 @@ $inputParametersPadding: 20px;
   &__shift-activator {
     margin-left: $inputParametersPadding;
     width: 20px;
-    background-color: $whisper;
+    background-image: $secondary-gradient;
     border-start-end-radius: 20px;
     border-end-end-radius: 20px;
     cursor: pointer;
