--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -68,3 +68,9 @@ mixin footer( item )
         +logo({ type: "colorful" })
         span.footer__remark.custom-font-style_body Copyright © 2018 Toxin отель. Все права защищены.
         .footer__content_icons
+          a(href="/address/change-me" target="_blank" rel="noopener noreferrer")
+            i.fa.fa-twitter( aria-hidden="true" )
+          a(href="/address/change-me" target="_blank" rel="noopener noreferrer")
+            i.fa.fa-facebook-square( aria-hidden="true" )
+          a(href="/address/change-me" target="_blank" rel="noopener noreferrer")
+            i.fa.fa-instagram( aria-hidden="true" )
