--- a/src/pages/website/__room/website__room.pug
+++ b/src/pages/website/__room/website__room.pug
@@ -19,10 +19,10 @@ block main
     .room-page
       .room-page__section_interiors-footage
         .room-page__footage_left
-          img.room-page__interior-pic_major( src=require(`/src/assets/images/raster/room/__original/room__original_888-1.jpg`) )
+          img.room-page__interior-pic_major( src=require("@images/raster/room/__original/room__original_888-1.jpg") )
         .room-page__footage_right
-          img.room-page__interior-pic_minor-top( src=require(`/src/assets/images/raster/room/__original/room__original_888-2.jpg`) )
-          img.room-page__interior-pic_minor-bottom( src=require(`/src/assets/images/raster/room/__original/room__original_888-3.jpg`) )  
+          img.room-page__interior-pic_minor-top( src=require("@images/raster/room/__original/room__original_888-2.jpg") )
+          img.room-page__interior-pic_minor-bottom( src=require("@images/raster/room/__original/room__original_888-3.jpg") )  
       .room-page__section_information.universal-container
         .room-page__sub-section_left
           .room-page__room-advantages
