--- a/src/assets/fonts/Material Icons/fonts.scss
+++ b/src/assets/fonts/Material Icons/fonts.scss
@@ -1,6 +1,7 @@
 @font-face {
   font-family: 'Material Icons';
+  src: url('fonts/MaterialIcons-Regular.eot');
+  src: local('☺'), url('fonts/MaterialIcons-Regular.woff') format('woff'), url('fonts/MaterialIcons-Regular.ttf') format('truetype'), url('fonts/MaterialIcons-Regular.svg') format('svg');
+  font-weight: normal;
   font-style: normal;
-  font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/materialicons/v99/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format('woff2');
 }
