Import aliases implementation: Components

--- a/src/components/range-slider/range-slider.pug
+++ b/src/components/range-slider/range-slider.pug
@@ -1,3 +1,5 @@
+include /components/title-bar/title-bar.pug
+
 mixin rangeSlider( item )
   - const stateId = item.id + '_state'
   - const widthClass = `elem__width_${ item.widthbypercent }`
