Webpack config is under construction 7: added url-loader for scss, fixed some notable bugs, implemented fonts for general stylesheet

--- a/src/pages/ui-kit/__colors-n-type/ui-kit__colors-n-type.scss
+++ b/src/pages/ui-kit/__colors-n-type/ui-kit__colors-n-type.scss
@@ -1,6 +1,6 @@
 .samples {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   justify-content: space-between;
   margin-top: 5px;
 
