Refactored absent import of icon styles

--- a/src/components/date-picker/date-picker.scss
+++ b/src/components/date-picker/date-picker.scss
@@ -79,7 +79,7 @@ $font-size: 12px;
     }
 
     &--title {
-      @extend .custom-font-style_h2;
+      @extend %custom-font-style_h2;
     }
   }
 
